--- a/index.html
+++ b/index.html
@@ -2,3 +2,4 @@ Hello World!<br>
 <img src="cat.jpg" width=100>
 <br>Hello Github!<br>
 <br>Hello from Github!<br>
+<br>Labdien, plz noradiet bankas kontu: <br>
